Deploy/bucket.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-deployment
spec:
  selector:
    matchLabels:
      app: minio
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: minio
    spec:
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: minio-pv-claim
      containers:
        - name: minio
          image: minio/minio:latest
          args:
            - server
            - --console-address
            - :9001
            - /storage
          ports:
            - containerPort: 9000
              hostPort: 9000
          volumeMounts:
            - name: storage
              mountPath: "/storage"
