Deploy/frontend.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      name: frontend
      labels:
        app: frontend
        app.kubernetes.io/name: frontend
    spec:
      containers:
        - name: frontend-deployment
          image: jejikeh/person-detection-frontend
          ports:
            - containerPort: 80
              name: http
          imagePullPolicy: Always
      restartPolicy: Always
