Deploy/backend.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app.kubernetes.io/name: backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  type: LoadBalancer
