Deploy/bucket.console.services.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-console-service
spec:
  selector:
    app: minio
  ports:
    - protocol: TCP
      port: 9001
      targetPort: 9001
  type: NodePort
