Deploy/frontend.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app.kubernetes.io/name: frontend
  ports:
    - protocol: TCP
      port: 80
  type: LoadBalancer
